[metadata]
name = linked
version = 0.0.5
url = https://github.com/i2mint/linked
platforms = any
description_file = README.md
root_url = https://github.com/i2mint/
license = apache-2.0
description = Create and transform graphs
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = linked

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	numpy
	scipy
	scikit-learn
	pynndescent

[options.extras_require]
testing = 
		

